rstudio test commit 3

--- a/1a_Difference Scores paired samples ttest_HowTo.qmd
+++ b/1a_Difference Scores paired samples ttest_HowTo.qmd
@@ -1,11 +1,5 @@
 ---
-format: 
-  #html:
-  #  toc: true
-  #  code-fold: true
-  docx:
-    toc: true
-prefer-html: true
+title: "DiffScoreExample"
 ---
 
 # Paired Samples T-test {.unnumbered}
