--- a/2b_Residualized Change Score multiple regression_HowTo.qmd
+++ b/2b_Residualized Change Score multiple regression_HowTo.qmd
@@ -1,11 +1,5 @@
 ---
-format: 
-  html:
-    toc: true
-    code-fold: true
-  docx:
-    toc: true
-prefer-html: true
+title: "Residualized Change Score Example"
 ---
 
 # Mulitple Regression {.unnumbered}
