--- a/index.qmd
+++ b/index.qmd
@@ -2,4 +2,4 @@
 title: "Temporary Landing Page for Longitudinal Project"
 ---
 
-This is github pages test site for the longitudinal analysis project
+This is github pages test site for the longitudinal analysis project. The information included within the site is for testing purposes only and contents may be inaccurate.
